# nutrition-bot

./: .env.example  .gitignore  README.md  pyproject.toml
gas/: Code.gs
scripts/: test_gas_integration.py  test_gemini_analysis.py
src/nutrition_bot/: bot.py  config.py  main.py  models.py  services.py  utils.py
tests/: test_services.py
